--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 </head>
 <body>
 
+    <!--create container for first section-->
+
+    <div class ="container">
+        <section class="section-1">
+            <nav class="navbar">
+                <a href="#" class="navbar-link">Design</a>
+                <a href="#" class="navbar-link">Custom</a>
+                <a href="#" class="navbar-link">Team</a>
+                <a href="#" class="navbar-link">Contact</a>
+            </nav>
+        </section>       
+
+
+        
+    </div>
+
 
     <script src="script.js"></script>
 </body>
