--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <a href="#" class="navbar-link">Team</a>
                 <a href="#" class="navbar-link">Contact</a>
             </nav>
+            <div class="floating-bg"></div>
+            <h1 class="section-1-heading">Creative Design</h1>
+            
         </section>       
 
 
