added HTML section 2 CUSTOMERS; styled images and heading

--- a/index.html
+++ b/index.html
@@ -28,9 +28,71 @@
    
             </div>    
         </section> 
-        <!--END OF SECTION 1-->   
-       
+        <!--END OF SECTION 1-->     
     </div>
+
+<!--SECTION 2-->
+<section class="section--2">
+    <h1 class="section-heading">Customers</h1>
+    <div class="customers-wrapper">
+        <div class="customer">
+           <i class="fas fa-quote-left"></i>
+               <p class="customer-text">Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit. Cum sunt omnis at dolores aliquam vitae 
+                    perferendis fugit, accusamus a excepturi vero sapiente iure
+                    qui consectetur amet. Ad inventore accusamus reprehenderit.
+                </p>
+                <div class="customer-rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <img src="images/customer-img-1.jpg"class="customer-img" alt="customer">
+           <h1 class="customer-name">Jane Lee</h1>
+        <div class="customer">
+           <i class="fas fa-quote-left"></i>
+               <p class="customer-text">Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit. Cum sunt omnis at dolores aliquam vitae 
+                    perferendis fugit, accusamus a excepturi vero sapiente iure
+                    qui consectetur amet. Ad inventore accusamus reprehenderit.
+                </p>
+                <div class="customer-rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <img src="images/customer-img-2.jpg"class="customer-img" alt="customer">
+           <h1 class="customer-name">Bob Smith</h1>
+        <div class="customer">
+           <i class="fas fa-quote-left"></i>
+               <p class="customer-text">Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit. Cum sunt omnis at dolores aliquam vitae 
+                    perferendis fugit, accusamus a excepturi vero sapiente iure
+                    qui consectetur amet. Ad inventore accusamus reprehenderit.
+                </p>
+                <div class="customer-rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <img src="images/customer-img-3.jpg"class="customer-img" alt="customer">
+           <h1 class="customer-name">Ann Brown</h1>
+        </div>
+           
+
+    </div>
+</section>
+
+
+
+
+<!--END OF SECTION W-->
 
 
     <script src="script.js"></script>
