modify and style customer section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                 </div>
                 <img src="images/customer-img-1.jpg"class="customer-img" alt="customer">
            <h1 class="customer-name">Jane Lee</h1>
+        </div>
+        
         <div class="customer">
            <i class="fas fa-quote-left"></i>
                <p class="customer-text">Lorem ipsum, dolor sit amet consectetur
@@ -67,6 +69,7 @@
                 </div>
                 <img src="images/customer-img-2.jpg"class="customer-img" alt="customer">
            <h1 class="customer-name">Bob Smith</h1>
+        </div>
         <div class="customer">
            <i class="fas fa-quote-left"></i>
                <p class="customer-text">Lorem ipsum, dolor sit amet consectetur
