complete styling of team section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
             </div>
             <div class="story">
                 <h4 class="story-heading">About Me</h4>
-                <p class="story-paragraph">Lorem ipsum dolor sit amet consectetur.
+                <p class="story-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio vitae dolorem tenetur non, ex veritatis blanditiis, quaerat, officiis eos nam numquam quas mollitia? Eveniet quia optio ratione amet,
+                     laboriosam alias ipsa, debitis numquam perferendis repudiandae, provident asperiores incidunt id dicta.
                      </p>
                     </div>
         </div>
@@ -136,7 +137,9 @@
             </div>
             <div class="story">
                 <h4 class="story-heading">About Me</h4>
-                <p class="story-paragraph">Lorem ipsum dolor sit amet consectetur.
+                <p class="story-paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur cum consequatur provident, ex earum dolore maiores reprehenderit. Sunt dolores ad neque quaerat voluptates vel blanditiis,
+                     quis perspiciatis eum iste quidem odit facere architecto saepe aliquam aspernatur incidunt! Obcaecati, modi debitis!
+
                      </p>
                 </div>
         </div>
@@ -157,7 +160,8 @@
             </div>
             <div class="story">
                 <h4 class="story-heading">About Me</h4>
-                <p class="story-paragraph">Lorem ipsum dolor sit amet consectetur. 
+                <p class="story-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, quidem! Ullam, molestiae reprehenderit dicta neque cumque eligendi, iste eius nam fugiat sequi magnam libero tempora vero, nesciunt 
+                     exercitationem fugit quo. Delectus dolore iusto corrupti assumenda repellat unde aspernatur! 
                      </p>
             </div>
         </div>
