changes in CSS styling section 3 Team

--- a/index.html
+++ b/index.html
@@ -165,16 +165,19 @@
                      </p>
             </div>
         </div>
-    </div>    
-
-
+    </div>
 </section>
 
-
-
-
-
 <!--END OF SECTION 3-->
+
+<!--SECTION 4-->
+
+
+
+
+
+
+<!--END OF SECTION 4-->
 
 
     <script src="script.js"></script>
